# AutogenCrashCourse

./: .gitignore  main.py  pyproject.toml  requirements.txt
01_IntroductionAndInstallation/: 01_Installation.ipynb  02.1AsyncFunctionalityPractical.ipynb
02_FirstAutogenAgent/: AgentChat_First_Agent.ipynb
04_AgentsInAutogen/:  Agents in Autogen .ipynb
05_ConfiguringModelsforAutogen/: 01_ConfiguringLLMs.ipynb  02_UsingOpenRouterWithAutogen.ipynb
06_MultimodalStrucuredOutput/: 01_MultiModel_Capabilities_with_Autogen_Agent.ipynb  02_Structured_Output.ipynb
07_TeamsInAutogen/: 01_UnderstandingMultiAgentSystems.ipynb  02_SelectorGroupChat.ipynb
08_TerminationCondition/: 01_UnderstandingMultiAgentSystems.ipynb
09_HumanInLoopInAutogen/: 9.0_inputFunction.py  9.1_humanInTheLoop.py  9.2_humanInTheLoopAfterRun.py
10_Tools/: 10.1_CustomToolsFunction.py  10.2_InbuiltTool.py  10.3_ThirdPartyTools.py
