[project]
name = "autogencrashcourse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "autogen-agentchat>=0.7.4",
    "autogen-core>=0.7.4",
    "autogen-ext[ollama,openai]>=0.7.4",
    "dotenv>=0.9.9",
    "ipykernel>=6.30.1",
]
